[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Pond.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.092, 33.0702 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 blue_tint : hint_color;

float rand(vec2 coord){
	return fract(sin(dot(coord, vec2(12.9898, 78.233)))* 43758.5453123);
}

float noise(vec2 coord){
	vec2 i = floor(coord);
	vec2 f = fract(coord);
	
	float a = rand(i);
	float b = rand(i + vec2(1.0, 0.0));
	float c = rand(i + vec2(0.0, 1.0));
	float d = rand(i + vec2(1.0, 1.0));

	vec2 cubic = f * f * (3.0 - 2.0 * f);

	return mix(a, b, cubic.x) + (c - a) * cubic.y * (1.0 - cubic.x) + (d - b) * cubic.x * cubic.y;
}

void fragment(){
	
	vec2 noisecoord1 = UV * 8.0;
	vec2 noisecoord2 = UV * 8.0 + 4.0;
	
	vec2 motion1 = vec2(TIME * 0.3, TIME * -0.4);
	vec2 motion2 = vec2(TIME * 0.1, TIME * 0.5);
	
	vec2 distort1 = vec2(noise(noisecoord1 + motion1), noise(noisecoord2 + motion1)) - vec2(0.5);
	vec2 distort2 = vec2(noise(noisecoord1 + motion2), noise(noisecoord2 + motion2)) - vec2(0.5);
	
	vec2 distort_sum = (distort1 + distort2) / 60.0;
	
	vec4 color = textureLod(SCREEN_TEXTURE,SCREEN_UV + distort_sum,0.0);
	
	color = mix(color,blue_tint,0.3);
	color.rgb = mix(vec3(0.5),color.rgb,1.4);
	
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/blue_tint = null

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Sky" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.74902, 0.745098, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shallow Water" type="ColorRect" parent="."]
margin_top = 200.0
margin_right = 1024.0
margin_bottom = 328.0
color = Color( 0.619608, 0.956863, 1, 1 )

[node name="Center Water" type="ColorRect" parent="."]
modulate = Color( 0.32549, 0.635294, 1, 0.717647 )
margin_top = 288.0
margin_right = 1024.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deep Water" type="ColorRect" parent="."]
modulate = Color( 0.733333, 0.611765, 1, 0.607843 )
margin_top = 384.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.603922, 0.443137, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rotate" type="Label" parent="."]
margin_right = 128.0
margin_bottom = 32.0

[node name="Direction" type="Label" parent="."]
margin_top = 32.0
margin_right = 128.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( -232, 72 )

[node name="Shoot" type="Label" parent="."]
margin_top = 64.0
margin_right = 128.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllowUserInput" type="Label" parent="."]
margin_top = 96.0
margin_right = 128.0
margin_bottom = 128.0

[node name="Score" type="Label" parent="."]
margin_top = 128.0
margin_right = 128.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( -232, 72 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionController" type="Sprite" parent="."]
position = Vector2( 512, 64 )
texture = ExtResource( 2 )

[node name="Rope" type="ColorRect" parent="DirectionController"]
margin_left = -8.0
margin_top = 30.0
margin_right = 8.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hook" type="Sprite" parent="DirectionController/Rope"]
position = Vector2( 8, 50 )
scale = Vector2( 0.483818, 0.498566 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="DirectionController/Rope/Hook"]
position = Vector2( -16.2828, 15.3499 )
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="DirectionController/Rope/Hook/Area2D"]
position = Vector2( 15.2578, 15.795 )
shape = SubResource( 1 )

[node name="Right1" type="Position2D" parent="."]
position = Vector2( 32, 352 )

[node name="Left1" type="Position2D" parent="."]
position = Vector2( 992, 416 )

[node name="Right2" type="Position2D" parent="."]
position = Vector2( 32, 544 )

[node name="Left2" type="Position2D" parent="."]
position = Vector2( 992, 480 )

[node name="Water Shader" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 512, 400 )
scale = Vector2( 16, 6.25 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="DirectionController/Rope/Hook/Area2D" to="." method="Catch"]
[connection signal="timeout" from="Timer" to="." method="IsTimeToSpawnFish"]
